--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 5px;
-    font-family: 'Mochiy Pop One', sans-serif;
+    font-family: 'Righteous', cursive;
 
 }
 a {
@@ -96,4 +96,56 @@ header {
     text-align: center;
     width: 1343px;
     font-family: 'Mochiy Pop One', sans-serif;
+}
+.cv {
+    background-color: rgb(60, 60, 60);
+    color: #f1f1f1;
+    width: 125px;
+    height: 45px;
+    border: none;
+    cursor: pointer;
+    border-radius: 25px;
+    font-size: 15px;
+    font-weight: bold;
+    position: relative;
+}
+button::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(45deg, red, blue, deeppink,blue,red,blue,deeppink,blue);
+    background-size: 800%;
+    border-radius: 25px;
+    filter: blur(8px);
+    animation: glowing 20s linear infinite;
+}
+
+@keyframes glowing{
+    0% {background-position: 0 0;}
+    50% {background-position: 400% 0;}
+    100%{background-position: 0 0;}
+}
+
+.name {
+    display: block;
+    font-family: monospace;
+    white-space: nowrap;
+    border-right: 4px solid;
+    width: 20ch;
+
+    animation: typing 2s steps(20),
+    blink .5s infinite step-end alternate;
+    overflow: hidden;
+}
+
+@keyframes typing {
+    from { width: 0;}
+}
+
+@keyframes blink {
+    50% {border-color: transparent}
 }
