--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: 0;
+    box-sizing: border-box;
 }
 html{
     scroll-behavior: smooth;
 }
 body {    
     background-color: lightgrey;
-    min-height: 900px;
+    min-height: 100vh;
     width: 1000px;
+    justify-content:center ;
+    align-items:center;
 }
 .navegar {
     position: fixed;
@@ -20,8 +22,9 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 5px;
-    font-family: 'Mochiy Pop One', sans-serif;
-
+    font-family: monospace;
+    font-size: 20px;
+    z-index: +5;
 }
 a {
     text-decoration: none;
@@ -36,7 +39,7 @@ nav a:hover{
 }
 header {
     padding-top: 60px;
-    height: 650px;
+    height: 700px;
     width: 1343px;
     background-image: url(./FondoIntro.jpg);
     background-size: cover;
@@ -96,4 +99,197 @@ header {
     text-align: center;
     width: 1343px;
     font-family: 'Mochiy Pop One', sans-serif;
+}
+.cv {
+    background-color: rgb(60, 60, 60);
+    color: #f1f1f1;
+    width: 125px;
+    height: 45px;
+    border: none;
+    cursor: pointer;
+    border-radius: 25px;
+    font-size: 15px;
+    font-weight: bold;
+    position: relative;
+}
+button::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(45deg, red, blue, deeppink,blue,red,blue,deeppink,blue);
+    background-size: 800%;
+    border-radius: 25px;
+    filter: blur(8px);
+    animation: glowing 20s linear infinite;
+}
+
+@keyframes glowing{
+    0% {background-position: 0 0;}
+    50% {background-position: 400% 0;}
+    100%{background-position: 0 0;}
+}
+
+.name {
+    display: block;
+    font-family: monospace;
+    white-space: nowrap;
+    border-right: 4px solid;
+    width: 20ch;
+
+    animation: typing 2s steps(20),
+    blink .5s infinite step-end alternate;
+    overflow: hidden;
+}
+
+@keyframes typing {
+    from { width: 0;}
+}
+
+@keyframes blink {
+    50% {border-color: transparent}
+}
+
+.copyright {
+    width: 1343px;
+    text-align: center;
+    font-size: 10px;
+    font-family: monospace;
+    font-weight: bold;
+}
+
+.galeria {
+    margin: 10px 39px;
+    float: left;
+    width: 250px;
+}
+
+.galeria img{
+    width: 30%;
+    height: auto;
+}
+
+.pie {
+    text-align: center;
+    padding: 10px;
+}
+
+.contenedor{
+    width: 100%;
+    display: flex;
+    max-width: 1343px;
+}
+
+.tarjetas{
+    width: 100%;
+    margin: 40px;
+    border-radius: 6px;
+    overflow: hidden;
+    background-color: #f1f1f1;
+    box-shadow: 0px 1px 10px rgb(0, 0, 0, 0.2);
+    cursor: default;
+    transition: all 400ms ease;
+}
+
+.tarjetas:hover{
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
+    transform: translateY(-3%);
+}
+
+.tarjetas img{
+    width: 100%;
+    height: 210px;
+}
+
+.tarjetas .contenido{
+    padding: 15px;
+    text-align: center;
+}
+
+.tarjetas .contenido p{
+    line-height: 1.5;
+    color: #6a6a6a;
+}
+
+.tarjetas .contenido h3{
+    margin-bottom: 15px;
+}
+
+.tarjetas .contenido a{
+    color: #f1f1f1;
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px;
+    margin-top: 10px;
+    border: 1px solid;
+    border-radius: 4px;
+    background-color: black;
+    transition: all 400ms ease;
+}
+
+.tarjetas .contenido a:hover{
+    background: black;
+    color: gray;
+}
+
+#contcarga{
+    background-color: rgb(0, 0, 0);
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    -webkit-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition: all 1s ease;
+    z-index: 10000;
+}
+
+#carga{
+    position:relative;
+    top: 40%;
+    left: 40%;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background: linear-gradient(45deg,transparent,
+    transparent 40%, #e5f403);
+    animation: animate 2s linear infinite;
+}
+
+@keyframes animate{0%
+   { transform: rotate(0deg);
+   filter:hue-rotate(0deg);
+   }100%{
+    transform: rotate(360deg);
+     filter:hue-rotate(360deg);
+   }
+}
+
+#carga:before{
+    content: '';
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    right: 6px;
+    bottom: 6px;
+    background: #000;
+    border-radius:50%;
+    z-index: 1000;
+}
+
+#carga:after{
+    content: '';
+    position:absolute;
+    top:0px;
+    left:0px;
+    right:0px;
+    bottom:0px; 
+    background:linear-gradient(45deg,transparent,
+    transparent 40%, #e5f403);
+    border-radius:50%;
+    z-index: 1000;
+    z-index:1;
+    filter: blur(30px);
 }
