--- a/style.css
+++ b/style.css
@@ -9,10 +9,14 @@ html{
 body {    
     background-color: lightgrey;
     min-height: 100vh;
-    width: 1304px;
-    justify-content:center ;
+    justify-content:center;
     align-items:center;
 }
+.todo{
+    width: 100%;
+    max-width: 1500px;
+}
+
 .navegar {
     position: fixed;
     display: flex;
@@ -37,10 +41,11 @@ nav a{
 nav a:hover{
     color: gray;
 }
+
 header {
     padding-top: 60px;
     height: 700px;
-    width: 1304px;
+    width: 100%;
     background-image: url(./FondoIntro.jpg);
     background-size: cover;
     background-position: center;
@@ -53,18 +58,19 @@ header {
     flex-direction: column;
     font-family: 'Righteous', cursive;
     font-size: 25px;
+    box-sizing: border-box;
 }
 .botones {
-    margin-left: 150px;
     margin-bottom: 20px;
     width: 100%;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 .botones a{
     text-decoration: none;
     font-size: 28px;
-    width: 45px;
+    width: 3.5%;
     height: 45px;
     line-height: 45px;
     text-align: center;
@@ -83,21 +89,22 @@ header {
     margin-top: 300px;
     margin-bottom: 300px;
     text-align: center;
-    width: 1304px;
+    width: 100%;
     font-family: 'Mochiy Pop One', sans-serif;
     scroll-margin-top: 7ex;
+    box-sizing: border-box;
 }
 .proyectos{
     margin-bottom: 300px;
     text-align: center;
-    width: 1304px;
+    width: 100%;
     font-family: 'Mochiy Pop One', sans-serif;
     scroll-margin-top: 7ex;
 }
 .tecnologias{
     margin-bottom: 300px;
     text-align: center;
-    width: 1343px;
+    width: 100%;
     font-family: 'Mochiy Pop One', sans-serif;
 }
 .cv {
@@ -154,33 +161,40 @@ button::before {
 }
 
 .copyright {
-    width: 1304px;
+    width: 100%;
     text-align: center;
     font-size: 10px;
     font-family: monospace;
     font-weight: bold;
 }
 
+.contecno{
+    display: flex;
+    max-width: 1500px;
+    width: 100%;
+}
+
 .galeria {
     margin: 10px 39px;
-    float: left;
-    width: 240px;
+    width: 19%;
+    box-sizing: border-box;
 }
 
 .galeria img{
-    width: 30%;
+    width: 50%;
     height: auto;
 }
 
 .pie {
     text-align: center;
     padding: 10px;
+    box-sizing: border-box;
 }
 
 .contenedor{
     width: 100%;
     display: flex;
-    max-width: 1304px;
+    max-width: 1500px;
 }
 
 .tarjetas{
@@ -207,6 +221,7 @@ button::before {
 .tarjetas .contenido{
     padding: 15px;
     text-align: center;
+    box-sizing: border-box;
 }
 
 .tarjetas .contenido p{
@@ -228,6 +243,7 @@ button::before {
     border-radius: 4px;
     background-color: black;
     transition: all 400ms ease;
+    box-sizing: border-box;
 }
 
 .tarjetas .contenido a:hover{
@@ -250,7 +266,7 @@ button::before {
     position:relative;
     top: 40%;
     left: 40%;
-    width: 150px;
+    width: 15%;
     height: 150px;
     border-radius: 50%;
     background: linear-gradient(45deg,transparent,
