--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
     font-size: 20px;
     z-index: +5;
 }
+
 a {
     text-decoration: none;
     color: snow;
@@ -40,6 +41,21 @@ nav a{
 }
 nav a:hover{
     color: gray;
+}
+
+#toggle{
+    display: none;
+}
+
+#darkmode{
+    cursor: pointer;
+    color: snow;
+    padding: 15px;
+    width: 50px;
+}
+.dark{
+    background-color: #1a1a1a;
+    color: white;
 }
 
 header {
@@ -222,6 +238,7 @@ button::before {
     padding: 15px;
     text-align: center;
     box-sizing: border-box;
+    color: #000;
 }
 
 .tarjetas .contenido p{
@@ -266,7 +283,7 @@ button::before {
     position:relative;
     top: 40%;
     left: 40%;
-    width: 15%;
+    width: 150px;
     height: 150px;
     border-radius: 50%;
     background: linear-gradient(45deg,transparent,
